# Ahlang

./: .gitignore  Cargo.toml  readme.md  syntax.md
.github/workflows/: push.yml
benches/: bench.rs  bench_macro.rs  bencher.rs  while_iter.rs
examples/: function_call.rs  run_script.rs  run_with_engine.rs  runner.rs
scripts/: vars.ahl
src/: interpreter.rs  lexer.rs  lexer_old.rs  lib.rs  main.rs  parser.rs  token.rs
src/interpreter/: mod.rs  opers.rs
src/parser/: ast.rs  expr.rs  mod.rs  print_ast.rs
src/stdlib/: mod.rs
tests/: tester.rs  while.rs  while_iter.rs
